adicionada as imagens
alterado o nome das imagens

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="product-cards">
             <div class="card">
                 <h2 class="product-tag">Ideal para pessoa física</h2>
-                <img src="Maquininha-mini.png" alt="Maquininha Mini">
+                <img src="maquininha1.png" alt="Maquininha Mini">
                 <h3>Maquininha Mini</h3>
                 <p>Para quem está começando</p>
                 <ul>
@@ -56,7 +56,7 @@
     
             <div class="card">
                 <h2 class="product-tag">Ideal para pessoa jurídica</h2>
-                <img src="Maquininha-classica.png" alt="Maquininha Clássica">
+                <img src="maquininha2.png" alt="Maquininha Clássica">
                 <h3>Maquininha Clássica</h3>
                 <p>Sustentável e com bobina</p>
                 <ul>
@@ -76,7 +76,7 @@
 
             <div class="card">
                 <h2 class="product-tag">Ideal para pessoa jurídica</h2>
-                <img src="Maquininha-top.png" alt="Maquininha Top">
+                <img src="maquininha2.png" alt="Maquininha Top">
                 <h3>Maquininha Top</h3>
                 <p>Para quem tá faturando muita grana</p>
                 <ul>
