--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="product-cards">
             <div class="card">
                 <h2 class="product-tag">Ideal para pessoa física</h2>
-                <img src="maquininha1.png" alt="Maquininha Mini">
+                <img src="img/maquininha1.png" alt="Maquininha Mini">
                 <h3>Maquininha Mini</h3>
                 <p>Para quem está começando</p>
                 <ul>
@@ -56,7 +56,7 @@
     
             <div class="card">
                 <h2 class="product-tag">Ideal para pessoa jurídica</h2>
-                <img src="maquininha2.png" alt="Maquininha Clássica">
+                <img src="img/maquininha2.png" alt="Maquininha Clássica">
                 <h3>Maquininha Clássica</h3>
                 <p>Sustentável e com bobina</p>
                 <ul>
@@ -76,7 +76,7 @@
 
             <div class="card">
                 <h2 class="product-tag">Ideal para pessoa jurídica</h2>
-                <img src="maquininha2.png" alt="Maquininha Top">
+                <img src="img/maquininha3.png" alt="Maquininha Top">
                 <h3>Maquininha Top</h3>
                 <p>Para quem tá faturando muita grana</p>
                 <ul>
@@ -103,11 +103,11 @@
                 </address>
                 <p><strong>Siga-nos</strong></p>
                 <div class="social-icons">
-                    <a href="#"><img src="icon-facebook.svg" alt="Facebook"></a>
-                    <a href="#"><img src="icon-youtube.svg" alt="YouTube"></a>
-                    <a href="#"><img src="icon-linkedin.svg" alt="LinkedIn"></a>
-                    <a href="#"><img src="icon-twitter.svg" alt="Twitter"></a>
-                    <a href="#"><img src="icon-instagram.svg" alt="Instagram"></a>
+                    <a href="#"><img src="img/media-social-icons/facebook.png" alt="Facebook"></a>
+                    <a href="#"><img src="img/media-social-icons/youtube.png" alt="YouTube"></a>
+                    <a href="#"><img src="img/media-social-icons/linkedin.png" alt="LinkedIn"></a>
+                    <a href="#"><img src="img/media-social-icons/twitter-x.png" alt="Twitter"></a>
+                    <a href="#"><img src="img/media-social-icons/instagram.png" alt="Instagram"></a>
                 </div>
             </div>
     
