adicionando formulario e estilizações
.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             </div>
             <ul class="nav-links">
                 <li><a href="#produtos">Produtos</a></li>
-                <li><a href="#ajuda">Ajuda</a></li>
                 <li><a href="#saiba-mais">Saiba Mais</a></li>
+                <li><a href="ajuda.html">Ajuda</a></li>
             </ul>
             <div class="nav-buttons">
                 <button class="btn login">Login</button>
