--- a/index.html
+++ b/index.html
@@ -89,6 +89,29 @@
                 <button>Adicionar no carrinho</button>
             </div>
         </div>
+
+        <div class="vantagens">
+            <div class="vantagem-card">
+                <a><img src="icons/conta.png"></a>
+                <p>Conta Digital e Cartão Gratuito</p>
+            </div>
+            <div class="vantagem-card">
+                <a><img src="icons/internet.png"></a>
+                <p>Wi-Fi, 3G, 4G e plano de dados grátis</p>
+            </div>
+            <div class="vantagem-card">
+                <a><img src="icons/qrcode.png"></a>
+                <p>Aproximação, Pix, QR Code e Chip</p>
+            </div>
+            <div class="vantagem-card">
+                <a><img src="icons/bateria.png"></a>
+                <p>Bateria com até 12 horas de duração</p>
+            </div>
+            <div class="vantagem-card">
+                <a><img src="icons/comissao.png"></a>
+                <p>Comissão com recargas para celular</p>
+            </div>
+        </div>
     </main>
     
     
