Corrigindo endereço icones

--- a/index.html
+++ b/index.html
@@ -92,23 +92,23 @@
 
         <div class="vantagens">
             <div class="vantagem-card">
-                <a><img src="icons/conta.png"></a>
+                <a><img src="img/icons/conta.png" alt="Conta"></a>
                 <p>Conta Digital e Cartão Gratuito</p>
             </div>
             <div class="vantagem-card">
-                <a><img src="icons/internet.png"></a>
+                <a><img src="img/icons/internet.png" alt="Internet"></a>
                 <p>Wi-Fi, 3G, 4G e plano de dados grátis</p>
             </div>
             <div class="vantagem-card">
-                <a><img src="icons/qrcode.png"></a>
+                <a><img src="img/icons/qrcode.png" alt="Qrcode"></a>
                 <p>Aproximação, Pix, QR Code e Chip</p>
             </div>
             <div class="vantagem-card">
-                <a><img src="icons/bateria.png"></a>
+                <a><img src="img/icons/bateria.png" alt="Bateria"></a>
                 <p>Bateria com até 12 horas de duração</p>
             </div>
             <div class="vantagem-card">
-                <a><img src="icons/comissao.png"></a>
+                <a><img src="img/icons/comissao.png" alt="Comissao"></a>
                 <p>Comissão com recargas para celular</p>
             </div>
         </div>
@@ -165,7 +165,7 @@
                     Site: <a href="#">Contato</a>
                 </p>
                 <p>
-                    Código de Conduta Getnet:<br>
+                    Código de Conduta Fintech:<br>
                     <a href="#">Clique aqui para acessá-lo!</a>
                 </p>
             </div>
