alterando o menu de navegação

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="#produtos">Produtos</a></li>
-                <li><a href="#saiba-mais">Saiba Mais</a></li>
+                <li><a href="#vantagens">Vantagens</a></li>
                 <li><a href="ajuda.html">Ajuda</a></li>
             </ul>
             <div class="nav-buttons">
